@@ -8,7 +8,8 @@ Version 4.2.3
 - Fixed identifier lookup inside ASM SHARED in BASIC
 - Changed sub-module names to include the suffix (so foo.spin may
   include foo.c as an object, which will be named foo_c)
-  
+- Replaced runs of duplicate lines in listing file with "..."
+
 Version 4.2.2
 - Added <>= operator for Spin
 - Added getsec() and getrnd() builtins for Spin2 and BASIC
